add curr symbol

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <label>
                     Currency 
                 </label>
-                <select>
-                <option value="">Dollar</option>
-                <option value="">Rupee</option>
-                <option value="">Euro</option>
-                <option value="">yen</option>
+                <select id="Currency">
+                <option value="1">Dollar</option>
+                <option value="2">Rupee</option>
+                <option value="3">Euro</option>
+                <option value="4">yen</option>
             </select>   
             </li>
        
@@ -51,7 +51,7 @@
         <tbody>
             <tr>
                 <td>Marketing</td>
-                <td id="1">0</td>
+                <td id="1"><span class="set_curr"></span>0</td>
                 <td><button id ="11" class="increment_class">+</button></td>
                 <td><button id="21" class="increment_class">-</button></td>
                 <td><button>*</button></td>
